--- a/PeopleMon/app/src/main/res/layout/map_view.xml
+++ b/PeopleMon/app/src/main/res/layout/map_view.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.jeremiahlewis.peoplemon.Views.MapsView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_world"
-        android:id="@+id/test"/>
-
+    android:layout_height="match_parent"
+    android:id="@+id/container_wrapper">
+<com.google.android.gms.maps.MapView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/map">
+</com.google.android.gms.maps.MapView>
 </com.jeremiahlewis.peoplemon.Views.MapsView>
