--- a/PeopleMon/app/src/main/res/layout/map_view.xml
+++ b/PeopleMon/app/src/main/res/layout/map_view.xml
@@ -5,25 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/container_wrapper">
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true">
 <com.google.android.gms.maps.MapView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/map">
 </com.google.android.gms.maps.MapView>
-    <android.support.design.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true">
-
-        <android.support.design.widget.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_dialog_map"
-            app:fabSize="normal"
-            android:id="@+id/move_to_location_button"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="10dp"
-            />
 
         <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
@@ -33,6 +23,15 @@
             android:id="@+id/view_caught_button"
             android:layout_gravity="bottom|start"
             android:layout_margin="10dp"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/checkIn_Button"
+            app:fabSize="normal"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="10dp"
+            android:src="@drawable/common_ic_googleplayservices"/>
 
     </android.support.design.widget.CoordinatorLayout>
 </com.jeremiahlewis.peoplemon.Views.MapsView>
