--- a/PeopleMon/app/src/main/res/menu/activity_menu.xml
+++ b/PeopleMon/app/src/main/res/menu/activity_menu.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/logout_option"
-        android:icon="@android:drawable/star_off"
-        android:orderInCategory="10"
-        android:title="@string/logout"
-        app:showAsAction="always"/>
+
+    <group>
+        <item
+            android:id="@+id/edit_profile"
+            android:title="Edit Profile">
+        </item>
+        <item
+            android:id="@+id/logout"
+            android:title="Logout"
+            />
+    </group>
 
 </menu>
